--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,15 @@
   height: 60px;
   width: 60px;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: absolute;
-  -webkit-animation: rotation .6s infinite linear;
-  animation: rotation .6s infinite linear;
+  -webkit-animation: rotation 0.6s infinite linear;
+  animation: rotation 0.6s infinite linear;
   border-left: 6px solid rgba(0, 174, 239, 0.15);
   border-right: 6px solid rgba(0, 174, 239, 0.15);
   border-bottom: 6px solid rgba(0, 174, 239, 0.15);
   border-top: 6px solid rgba(0, 174, 239, 0.8);
   border-radius: 100%;
-}
-
-.report_mystudent .pagelayout-standard #page.drawers .main-inner, body.limitedwidth #page.drawers .main-inner {
-  max-width: 100% !important;
 }
 
 @-webkit-keyframes rotation {
@@ -27,18 +21,14 @@
     -webkit-transform: rotate(359deg);
   }
 }
-
 @keyframes rotation {
   from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
-
 #overlay {
   position: absolute;
   display: none;
@@ -51,17 +41,14 @@
 }
 
 .dash-card {
-  -webkit-box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   border-radius: 1rem;
   height: 35vh;
 }
-
 .dash-card .card-header {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
 }
-
 .dash-card .chart {
   border-radius: 0.3rem;
 }
@@ -86,15 +73,12 @@
   background: white;
   padding: 1rem;
   border: 1px solid #ccc;
-  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
-
 .cgs-dashboard-modal .cgs-dashboard-modal__title {
   text-align: center;
   margin: 0 0 1rem 0;
 }
-
 .cgs-dashboard-modal .cgs-dashboard-modal__actions {
   text-align: center;
 }
@@ -113,7 +97,7 @@
 }
 
 /* Attendance Report */
-.cgs-dashboard-attendance-table, .cgs-dashboard-gandeffort-table, .assignment-table, .cgs-academic-cgs-activities {
+.cgs-dashboard-attendance-table, .cgs-academic-cgs-activities, .assignment-table, .cgs-dashboard-gandeffort-table {
   border-collapse: separate;
   border-spacing: 0;
   min-width: 350px;
@@ -123,69 +107,54 @@
   /* bottom-left border-radius */
   /* bottom-right border-radius */
 }
-
-.cgs-dashboard-attendance-table tr th, .cgs-dashboard-gandeffort-table tr th, .assignment-table tr th, .cgs-academic-cgs-activities tr th,
+.cgs-dashboard-attendance-table tr th, .cgs-academic-cgs-activities tr th, .assignment-table tr th, .cgs-dashboard-gandeffort-table tr th,
 .cgs-dashboard-attendance-table tr td,
-.cgs-dashboard-gandeffort-table tr td,
+.cgs-academic-cgs-activities tr td,
 .assignment-table tr td,
-.cgs-academic-cgs-activities tr td {
+.cgs-dashboard-gandeffort-table tr td {
   border-right: 1px solid #66A8D8;
   border-bottom: 1px solid #66A8D8;
   padding: 5px;
 }
-
-.cgs-dashboard-attendance-table tr th:first-child, .cgs-dashboard-gandeffort-table tr th:first-child, .assignment-table tr th:first-child, .cgs-academic-cgs-activities tr th:first-child,
+.cgs-dashboard-attendance-table tr th:first-child, .cgs-academic-cgs-activities tr th:first-child, .assignment-table tr th:first-child, .cgs-dashboard-gandeffort-table tr th:first-child,
 .cgs-dashboard-attendance-table tr td:first-child,
-.cgs-dashboard-gandeffort-table tr td:first-child,
+.cgs-academic-cgs-activities tr td:first-child,
 .assignment-table tr td:first-child,
-.cgs-academic-cgs-activities tr td:first-child {
+.cgs-dashboard-gandeffort-table tr td:first-child {
   border-left: 1px solid #66A8D8;
   border-left: 1px solid #66A8D8;
 }
-
-.cgs-dashboard-attendance-table tr th, .cgs-dashboard-gandeffort-table tr th, .assignment-table tr th, .cgs-academic-cgs-activities tr th {
+.cgs-dashboard-attendance-table tr th, .cgs-academic-cgs-activities tr th, .assignment-table tr th, .cgs-dashboard-gandeffort-table tr th {
   background: #005892;
   border-top: 1px solid #66A8D8;
   text-align: center;
   color: white;
 }
-
-.cgs-dashboard-attendance-table tr:first-child th:first-child, .cgs-dashboard-gandeffort-table tr:first-child th:first-child, .assignment-table tr:first-child th:first-child, .cgs-academic-cgs-activities tr:first-child th:first-child {
+.cgs-dashboard-attendance-table tr:first-child th:first-child, .cgs-academic-cgs-activities tr:first-child th:first-child, .assignment-table tr:first-child th:first-child, .cgs-dashboard-gandeffort-table tr:first-child th:first-child {
   border-top-left-radius: 6px;
 }
-
-.cgs-dashboard-attendance-table tr:first-child th:last-child, .cgs-dashboard-gandeffort-table tr:first-child th:last-child, .assignment-table tr:first-child th:last-child, .cgs-academic-cgs-activities tr:first-child th:last-child {
+.cgs-dashboard-attendance-table tr:first-child th:last-child, .cgs-academic-cgs-activities tr:first-child th:last-child, .assignment-table tr:first-child th:last-child, .cgs-dashboard-gandeffort-table tr:first-child th:last-child {
   border-top-right-radius: 6px;
 }
-
-.cgs-dashboard-attendance-table tr:last-child td:first-child, .cgs-dashboard-gandeffort-table tr:last-child td:first-child, .assignment-table tr:last-child td:first-child, .cgs-academic-cgs-activities tr:last-child td:first-child {
+.cgs-dashboard-attendance-table tr:last-child td:first-child, .cgs-academic-cgs-activities tr:last-child td:first-child, .assignment-table tr:last-child td:first-child, .cgs-dashboard-gandeffort-table tr:last-child td:first-child {
   border-bottom-left-radius: 6px;
 }
-
-.cgs-dashboard-attendance-table tr:last-child td:last-child, .cgs-dashboard-gandeffort-table tr:last-child td:last-child, .assignment-table tr:last-child td:last-child, .cgs-academic-cgs-activities tr:last-child td:last-child {
+.cgs-dashboard-attendance-table tr:last-child td:last-child, .cgs-academic-cgs-activities tr:last-child td:last-child, .assignment-table tr:last-child td:last-child, .cgs-dashboard-gandeffort-table tr:last-child td:last-child {
   border-bottom-right-radius: 6px;
 }
-
-.cgs-dashboard-attendance-table th, .cgs-dashboard-gandeffort-table th, .assignment-table th, .cgs-academic-cgs-activities th {
+.cgs-dashboard-attendance-table th, .cgs-academic-cgs-activities th, .assignment-table th, .cgs-dashboard-gandeffort-table th {
   font-size: 1.1rem;
 }
 
 .cgs-dashboard-attendance-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-bottom: 2rem;
-  -ms-flex-line-pack: end;
-      align-content: flex-end;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-content: flex-end;
+  flex-wrap: wrap;
+  align-items: flex-start;
   gap: 2rem;
   text-align: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 
 .attbyterm {
@@ -248,28 +217,17 @@ span#attendance-based-on-rollmarking-show {
     width: 100%;
   }
 }
-
 .cgs-dashboard-academic-info-container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 50%;
-      grid-template-columns: 50%;
+  grid-template-columns: 50%;
   row-gap: 20px;
 }
 
-.graph-containers, .cgs-dashboard-naplan-container, .cgs-dashboard-gandef-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.graph-containers, .cgs-dashboard-gandef-container, .cgs-dashboard-naplan-container {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
   text-align: center;
   gap: 1rem;
 }
@@ -278,7 +236,6 @@ span#attendance-based-on-rollmarking-show {
   position: relative;
   width: 50vw;
 }
-
 @media (max-width: 926px) {
   .chart-container {
     height: 40vh;
@@ -296,20 +253,16 @@ span#attendance-based-on-rollmarking-show {
   border: 1px solid gray;
   border-radius: 0.5rem;
   padding: 1rem;
-  -ms-grid-row: 1;
-      grid-row-start: 1;
+  grid-row-start: 1;
 }
-
 .cgs-dashboard-academic-report-container .my-custom-scrollbar {
   position: relative;
   height: 500px;
   overflow: auto;
 }
-
 .cgs-dashboard-academic-report-container .table-wrapper-scroll-y {
   display: inline-block;
 }
-
 .cgs-dashboard-academic-report-container img.file-pdf {
   max-height: 25px;
   cursor: pointer;
@@ -357,11 +310,10 @@ span#attendance-based-on-rollmarking-show {
 
 .cgs-assignments-container {
   grid-column-end: 3;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
+  grid-column-start: 1;
   height: auto;
   border: 1px solid gray;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   padding: 1rem;
 }
 
@@ -393,7 +345,7 @@ span#attendance-based-on-rollmarking-show {
   /* Full height */
   overflow: auto;
   /* Enable scroll if needed */
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
   /* Black w/ opacity */
@@ -414,32 +366,26 @@ span#attendance-based-on-rollmarking-show {
   /* Full height */
   overflow: auto;
   /* Enable scroll if needed */
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
   /* Black w/ opacity */
 }
-
 .modal-history-background .cgs-grade-history-container {
   height: 100%;
 }
-
 .modal-history-background .cgs-grade-history-container .grades-his {
   height: 80%;
 }
-
 .modal-history-background .cgs-grade-history-container #grade-history-table {
   height: 80%;
 }
-
 .modal-history-background .cgs-effort-history-container {
   height: 100%;
 }
-
 .modal-history-background .cgs-effort-history-container .effort-his {
   height: 80%;
 }
-
 .modal-history-background .cgs-effort-history-container #effort-history-table {
   height: 80%;
   width: inherit;
@@ -487,18 +433,15 @@ table#effort-history-table {
 .cgs-dashboard-naplan-container img {
   max-width: 60%;
 }
-
 @media (max-width: 926px) {
   .cgs-dashboard-naplan-container img {
     max-width: 100%;
   }
 }
-
 .cgs-dashboard-naplan-container .chart-container {
   position: relative;
   width: 50vw;
 }
-
 @media (max-width: 926px) {
   .cgs-dashboard-naplan-container .chart-container {
     height: 40vh;
@@ -507,15 +450,14 @@ table#effort-history-table {
 }
 
 a.chart-action {
-  -webkit-transition: background .25s, border-color .25s;
-  transition: background .25s, border-color .25s;
+  transition: background 0.25s, border-color 0.25s;
   background: rgba(40, 44, 52, 0.05);
   border: 1px solid transparent;
   border-radius: 6px;
   color: #3080d0;
   text-decoration: none;
   display: inline-block;
-  font-size: .8rem;
+  font-size: 0.8rem;
   padding: 8px 16px;
   margin: 0 8px 8px 0;
   cursor: pointer;
@@ -530,14 +472,12 @@ a.chart-action {
   width: 50vw;
   height: 60vh;
 }
-
 @media (max-width: 926px) {
   .cgs-dashboard-gandef-container #performance {
     height: 40vh;
     width: 95vw;
   }
 }
-
 .cgs-dashboard-gandef-container .grade-effort-tables-container {
   width: 80%;
 }
@@ -545,7 +485,6 @@ a.chart-action {
 .cgs-dashboard-gandeffort-table {
   min-width: 100%;
 }
-
 .cgs-dashboard-gandeffort-table tr.reports-heading th {
   background-color: #005892;
   border: 0px solid #005892;
@@ -560,13 +499,12 @@ a.chart-action {
   height: 100%;
   overflow: hidden;
   border: 1px solid gray;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   padding: 1rem;
 }
 
 .cgs-effort-main-container {
-  -ms-grid-column: 1;
-      grid-column-start: 1;
+  grid-column-start: 1;
   grid-column-end: 3;
 }
 
@@ -574,10 +512,9 @@ a.chart-action {
   height: 99%;
   overflow: hidden;
   border: 1px solid gray;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   padding: 1rem;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
+  grid-column-start: 1;
   grid-column-end: 3;
 }
 
@@ -597,7 +534,6 @@ tr.reports-heading {
   text-align: center;
   background-color: lightgrey;
 }
-
 tr.reports-heading th {
   background-color: #005892;
 }
@@ -616,7 +552,6 @@ tr.reports-heading th {
   max-height: 20vh;
   overflow: hidden;
 }
-
 .feedbackcomment-modal-content .feedbackcomment-modal-content-expanded {
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -631,21 +566,19 @@ tr.reports-heading th {
     max-width: 100% !important;
   }
 }
-
 @media (max-width: 900px) {
   .cgs-dashboard-academic-report-container {
     width: 100%;
   }
   .cgs-dashboard-academic-report-container,
-  .cgs-grade-main-container,
-  .cgs-effort-main-container,
-  .cgs-assignments-container {
+.cgs-grade-main-container,
+.cgs-effort-main-container,
+.cgs-assignments-container {
     grid-column-end: 3;
-    -ms-grid-column: 1;
-        grid-column-start: 1;
+    grid-column-start: 1;
   }
   .modal-history-content,
-  .modal-report-my-student-content {
+.modal-report-my-student-content {
     background-color: #fefefe;
     margin: 50% auto;
     padding: 20px;
@@ -655,5 +588,4 @@ tr.reports-heading th {
   .modal-report-my-student-content img {
     width: inherit;
   }
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
